[gd_scene load_steps=39 format=3 uid="uid://dpo7e0v52us51"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_id2h3"]
[ext_resource type="Texture2D" uid="uid://c5r6ejl5js4v2" path="res://assets/player/TrackBot.png" id="1_wp6fj"]
[ext_resource type="PackedScene" uid="uid://dj0s26qye7tdl" path="res://scenes/laser_gun.tscn" id="3_vs3jp"]
[ext_resource type="PackedScene" uid="uid://paq6ku5etsqo" path="res://scenes/utils/hurt_box.tscn" id="4_j6vvh"]
[ext_resource type="PackedScene" uid="uid://byyt0krwlkn6w" path="res://scenes/utils/ship_pointer.tscn" id="5_5lv5a"]

[sub_resource type="AtlasTexture" id="AtlasTexture_a2bhm"]
atlas = ExtResource("1_wp6fj")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ouk7y"]
atlas = ExtResource("1_wp6fj")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6jtn"]
atlas = ExtResource("1_wp6fj")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ek8n"]
atlas = ExtResource("1_wp6fj")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_at76b"]
atlas = ExtResource("1_wp6fj")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mu0qe"]
atlas = ExtResource("1_wp6fj")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rr83v"]
atlas = ExtResource("1_wp6fj")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_76y7g"]
atlas = ExtResource("1_wp6fj")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i4o85"]
atlas = ExtResource("1_wp6fj")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4csu"]
atlas = ExtResource("1_wp6fj")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvddg"]
atlas = ExtResource("1_wp6fj")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gh1eh"]
atlas = ExtResource("1_wp6fj")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_am3s3"]
atlas = ExtResource("1_wp6fj")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vbli6"]
atlas = ExtResource("1_wp6fj")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhwrd"]
atlas = ExtResource("1_wp6fj")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tldwp"]
atlas = ExtResource("1_wp6fj")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6eq0"]
atlas = ExtResource("1_wp6fj")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ugek8"]
atlas = ExtResource("1_wp6fj")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w48ri"]
atlas = ExtResource("1_wp6fj")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_okupc"]
atlas = ExtResource("1_wp6fj")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6qwj"]
atlas = ExtResource("1_wp6fj")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3xqx"]
atlas = ExtResource("1_wp6fj")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ke3ss"]
atlas = ExtResource("1_wp6fj")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_35rat"]
atlas = ExtResource("1_wp6fj")
region = Rect2(160, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngepy"]
atlas = ExtResource("1_wp6fj")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hem4p"]
atlas = ExtResource("1_wp6fj")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4n2j"]
atlas = ExtResource("1_wp6fj")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6r7qv"]
atlas = ExtResource("1_wp6fj")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ga2k"]
atlas = ExtResource("1_wp6fj")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p8ols"]
atlas = ExtResource("1_wp6fj")
region = Rect2(160, 64, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_7yl4c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a2bhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ouk7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6jtn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ek8n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_at76b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mu0qe")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rr83v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_76y7g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i4o85")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4csu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvddg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gh1eh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_am3s3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vbli6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hhwrd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tldwp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j6eq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugek8")
}],
"loop": true,
"name": &"walk_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w48ri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_okupc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6qwj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3xqx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ke3ss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_35rat")
}],
"loop": true,
"name": &"walk_h",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ngepy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hem4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4n2j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6r7qv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ga2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p8ols")
}],
"loop": true,
"name": &"walk_up",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_04s2r"]
size = Vector2(17, 24)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kakca"]
radius = 9.2711

[node name="Player" type="CharacterBody2D" groups=["Player"]]
light_mask = 17
visibility_layer = 17
position = Vector2(0, -1)
collision_layer = 2
collision_mask = 93
motion_mode = 1
script = ExtResource("1_id2h3")
SPEED = 35.0

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_7yl4c")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.953738

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="LaserGun" parent="." instance=ExtResource("3_vs3jp")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 16
visibility_layer = 16
position = Vector2(-1.5, 2)
scale = Vector2(0.690014, 0.690014)
shape = SubResource("RectangleShape2D_04s2r")

[node name="BatteryTimer" type="Timer" parent="."]
autostart = true

[node name="HurtBox" parent="." instance=ExtResource("4_j6vvh")]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(-2, 2)
scale = Vector2(0.755035, 0.755035)
shape = SubResource("CapsuleShape2D_kakca")

[node name="ShipPointer" parent="." instance=ExtResource("5_5lv5a")]

[connection signal="timeout" from="BatteryTimer" to="." method="_on_battery_timer_timeout"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]

[editable path="LaserGun"]
[editable path="HurtBox"]
